--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .blue {
-			background-color:blue
-}
+			background-color:red;
+			border:2px solid purple;
+		}
 .circle{
 			border-radius:50%;
 			width: 500px;
